<resources>
    <string name="app_name">Activities</string>
    <string name="description">description</string>
    <string name="hint_small_description">a few words</string>
    <string name="button">button</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="birth_date">birth date</string>
    <string name="country">country</string>
    <string name="apply">apply</string>
    <string name="click_me">click me</string>
    <string name="nextActivityButtonLabel">next screen</string>
    <string name="etCityLabel">city</string>
    <string name="etStreetLabel">street</string>
    <string name="etHouseLabel">house</string>
    <string name="showToastButtonLabel">Show Toast</string>
    <string name="customToastLabel">This is a custom toast!</string>
    <string name="rbBeefLabel">beef</string>
    <string name="rbChickenLabel">chicken</string>
    <string name="rbPorkLabel">pork</string>
    <string name="cbCheeseLabel">cheese</string>
    <string name="cbOnionLabel">onion</string>
    <string name="cbSaladLabel">salad</string>
    <string name="tvPersonLabel">person</string>
    <string name="btnRequestPermissionsLabel">request permissions</string>
    <string name="explicationOfLocationRequest">Please allow geolocation access to help show you more relevant answers to your queries.</string>
    <string name="LocationRequestMessageTitle">Your Location Request</string>
    <string name="empty_text" translatable="false" />
    <string name="PDF_Selected">It\'s PDF file</string>
    <string name="unknownTypeOfFile">Not ok, wrong file</string>
    <string name="settingLabel">Setting</string>
    <string name="addContactLabel">Add Contact</string>
    <string name="favoritesLabel">Favorites</string>
    <string name="feedbackRequest">Give Feedback</string>
    <string name="closeLabel">Close</string>
    <string name="bottom_menu_home_label">Home</string>
    <string name="bottom_menu_messages_label">Messages</string>
    <string name="bottom_menu_profile_label">Profile</string>
    <string name="sweetHomeLabel">Home, sweet home.</string>
    <string name="noMessagesLabel">just empty</string>
    <string name="profileLabel">not OK, mb VK</string>
    <string name="my_activities_label">My Activities</string>
    <string name="openLabel">Open</string>
    <string name="activity_a_title">Activity A</string>
    <string name="activity_b_title">Activity B</string>
    <string name="activity_c_title">Activity C</string>
    <string name="item_goToC">to upload Image</string>
    <string name="item_goToD">to separate screen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_top_fragment">I\'m blue</string>
    <string name="hello_bottom_fragment">I\'m green ♻</string>
    <string name="saveAnyDataLabelCAPS">SAVE</string>
    <string name="loadAnyDataLabel">Load</string>
    <string name="bluetooth_enabled_label">Bluetooth enabled</string>
    <string name="bluetooth_disabled_label">Bluetooth disabled</string>
    <string name="wifi_enabled_label">Wifi enabled</string>
    <string name="wifi_disabled_label">Wifi disabled</string>
    <string name="activity_k_title"><![CDATA[drag&drop]]></string>
</resources>