<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/miSettings"
        android:title="@string/settingLabel"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/miAddContact"
        android:title="@string/addContactLabel"
        android:icon="@drawable/ic_add_contact"
        app:showAsAction="always" />

    <item
        android:id="@+id/miFavorites"
        android:title="@string/favoritesLabel"
        android:icon="@drawable/ic_favorites"
        app:showAsAction="always" />

    <item
        android:id="@+id/miFeedback"
        android:title="@string/feedbackRequest"
        app:showAsAction="never" />

    <item
        android:id="@+id/miClose"
        android:title="@string/closeLabel"
        app:showAsAction="never" />

</menu>