<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_padding"
    tools:context=".ActivityC">

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/constraint_match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toStartOf="@+id/editTextText4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="@dimen/constraint_match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_padding"
        android:layout_marginLeft="@dimen/standard_padding"
        android:ems="10"
        android:hint="@string/hint_small_description"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/constraint_match_parent"
        android:layout_height="@dimen/constraint_match_parent"
        android:layout_marginTop="@dimen/standard_padding"
        android:layout_marginBottom="@dimen/standard_padding"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/constraint_match_parent"
        android:layout_marginBottom="@dimen/standard_padding"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="@dimen/constraint_match_parent"
        android:layout_height="@dimen/constraint_match_parent"
        android:layout_marginEnd="@dimen/standard_padding"
        android:layout_marginRight="@dimen/standard_padding"
        android:layout_marginBottom="@dimen/standard_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85499316" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15868673" />

</androidx.constraintlayout.widget.ConstraintLayout>